k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wedding-invite
spec:
  replicas: 1
  selector:
    matchLabels:
      app: wedding-invite
  template:
    metadata:
      labels:
        app: wedding-invite
    spec:
      containers:
      - name: app
        image: YOUR_DOCKER_REPO/wedding-invite:latest
        ports:
        - containerPort: 8000
