k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wedding-invite
spec:
  type: ClusterIP
  selector:
    app: wedding-invite
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
